--- a/src/main/java/java1702/javase/reflect/demo/c/cofig.properties
+++ b/src/main/java/java1702/javase/reflect/demo/c/cofig.properties
@@ -1,1 +1,1 @@
-key = valuek = 你好className = java1702.javase.reflect.demo.c.FloppyWritermethodName = writeToFloppy#className = java1702.javase.reflect.demo.c.portableHdWriter#methodName = writeToPortableHd
+#这是文本文件，不需要编译key = valuek = 你好#className = java1702.javase.reflect.demo.c.FloppyWriter#methodName = writeToFloppyclassName = java1702.javase.reflect.demo.c.PortableHdWritermethodName = writeToPortableHd
